IC - SharedPreferences used to get location